--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,21 @@
 extends layout
 
 block content
-  h1= title
-  form(onsubmit='window.onSubmit(event);')
-    input(id='room-id', type='text')
-    button(type='submit')= 'Enter'
+  div(class='min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8')
+    .max-w-md.w-full.space-y-8
+      div
+        img.mx-auto.h-12.w-auto(src='https://tailwindui.com/img/logos/workflow-mark.svg?color=indigo&shade=600', alt='Workflow')
+        h2.mt-6.text-center.text-3xl.tracking-tight.font-bold.text-gray-900= title
+        p.mt-2.text-center.text-sm.text-gray-600
+      form.mt-8.space-y-6(onsubmit='window.onSubmit(event)')
+        input(type='hidden', name='remember', value='true')
+        .rounded-md.shadow-sm.-space-y-px
+          div
+            label.sr-only(for='room-id') Room ID
+            input#room-id(class='appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm', type='text', required='required', placeholder='Room ID')
+        div
+          button(class='group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500', type='submit')
+            span.absolute.left-0.inset-y-0.flex.items-center.pl-3
+              i.fa-solid.fa-right-to-bracket
+            | Enter
   script(type='module', src='/javascripts/index.js')
