--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    script(src='https://cdn.tailwindcss.com')
+  body.p-0
     block content
