--- a/views/room.jade
+++ b/views/room.jade
@@ -12,7 +12,7 @@ block content
           span.pl-3= `User ${roomId}`
           a(class='pl-5 text-gray-400 hover:text-white focus:outline-none', href='/')
             i.fa-solid.fa-right-from-bracket
-  div#subscribing.shadow-inner.bg-gray-100(style='height: calc(100vh - 64px - 38px)')
+  div#subscribing.shadow-inner.bg-gray-100.overflow-y-auto(style='height: calc(100vh - 64px - 38px)')
   form#publisher.absolute.bottom-0.w-full(onsubmit='window.onSubmit(event)')
     .flex.border-t.border-gray-300.py-2.px-3
       input#publishing(class='placeholder-gray-500 text-gray-900 focus:ring-indigo-500 focus:border-indigo-500 flex-1 block w-full sm:text-sm outline-none', type='text', placeholder='...')
