--- a/views/room.jade
+++ b/views/room.jade
@@ -8,16 +8,21 @@ block content
           img.h-8.w-auto(src='https://tailwindui.com/img/logos/workflow-mark.svg?color=indigo&shade=600', alt='logo')
           span(class='px-3 hidden md:inline')= title
         .flex.justify-end.items-center.text-gray-400
-          span.pl-3= `Room ${roomId}`
-          span.pl-3= `User ${roomId}`
+          span.pl-3
+            i.fa-solid.fa-door-closed.pr-1
+            span= roomId
+          span.pl-3
+            i.fa-solid.fa-user.pr-1
+            span= userName
           a(class='pl-5 text-gray-400 hover:text-white focus:outline-none', href='/')
             i.fa-solid.fa-right-from-bracket
   div#subscribing.shadow-inner.bg-gray-100.overflow-y-auto(style='height: calc(100vh - 64px - 45px)')
   form#publisher.absolute.bottom-0.w-full(onsubmit='window.onSubmit(event)')
     .flex.border-t.border-gray-300.py-2.px-3
-      input#publishing(class='placeholder-gray-500 text-gray-900 focus:ring-indigo-500 focus:border-indigo-500 flex-1 block w-full outline-none', type='text', placeholder='...')
+      input#publishing(class='placeholder-gray-500 text-gray-900 focus:ring-indigo-500 focus:border-indigo-500 flex-1 block w-full outline-none', type='text', placeholder='...', autofocus)
       button.text-indigo-600(type='submit').text-lg
         i.fa-solid.fa-paper-plane
   script.
     const ROOM_ID = '!{roomId}'
+    const USER_NAME = '!{userName}'
   script(type='module', src='/javascripts/room.js')
