--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,14 @@
 doctype html
-html
+html.dark
   head
     meta(name='viewport', content='width=device-width,initial-scale=1.0,minimal-ui,maximum-scale=1.0')
     title= title
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='https://cdn.tailwindcss.com')
+    script.
+      tailwind.config = {
+        darkMode: 'class',
+      };
   body.p-0
     block content
