feat: Enable to toggle darkmode

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html.dark
+html
   head
     meta(name='viewport', content='width=device-width,initial-scale=1.0,minimal-ui,maximum-scale=1.0')
     title= title
@@ -10,5 +10,5 @@ html.dark
       tailwind.config = {
         darkMode: 'class',
       };
-  body.p-0
+  body.dark.p-0
     block content
