--- a/views/room.jade
+++ b/views/room.jade
@@ -2,17 +2,9 @@ extends layout
 
 block content
   .relative.bg-white(class='dark:bg-gray-800')
-    .mx-auto
-      .flex.justify-between.items-center.p-4(class='dark:text-gray-300')
-        .flex.justify-start.items-center
-          img.h-8.w-auto(src='https://tailwindui.com/img/logos/workflow-mark.svg?color=indigo&shade=600', alt='logo')
-          span.px-3.hidden(class='md:inline')= title
-        .flex.justify-end.items-center
-          label.flex.items-center
-            i.fa-solid.fa-sun.mr-2
-            input#darkmode-switch.peer.sr-only(type='checkbox', checked, onchange='window.onToggleDarkmodeSwitch(event)')
-            span.block.cursor-pointer.bg-gray-500.rounded-full(class='w-[2em] p-[1px] after:block after:h-[1em] after:w-[1em] after:rounded-full after:bg-white after:transition peer-checked:bg-blue-500 peer-checked:after:translate-x-[calc(100%-2px)]')
-            i.fa-solid.fa-moon.ml-2
+    .flex.items-center.p-4(class='dark:text-gray-300')
+      img.h-8.w-auto(src='https://tailwindui.com/img/logos/workflow-mark.svg?color=indigo&shade=600', alt='logo')
+      span.px-3.hidden(class='md:inline')= title
   #subscribing.shadow-inner.bg-gray-100.overflow-y-auto(style='height: calc(100vh - 64px - 45px)')
   form#publisher.absolute.bottom-0.w-full(onsubmit='window.onSubmitMessage(event)')
     .flex.border-t.border-gray-300.py-2.px-3
